# WasserXR-Core

./: .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  console.md  flake.nix  state.rs  wasserxr_core.pc.in
.github/workflows/: ci.yml  clang-tidy.yml  publish-crates.yml  release.yml  tests.yml
assets/materials/: base.json
include/WasserXR/core/: Commands.h  Model.h
include/glad/: gl.h
src/: camera.rs  console.rs  errors.rs  lib.rs  material_asset.rs  model.rs  model_asset.rs  opengl.rs  opengl_model_asset.rs  renderer.rs  shader.rs  shader_asset.rs  transform.rs  window.rs
src/WasserXR/core/: Camera.c  Commands.c  Console.c  ConsoleSystem.c  MeshRenderer.c  Model.c  Transform.c  Window.c  WindowRenderer.c
src/WasserXR/core/internal/: Mesh.c  Mesh_Data.c  Mesh_internal.h  Shader.c  Shader_internal.h
src/console/: console_app.rs  console_component.rs  console_data.rs  console_system.rs  mod.rs  state.rs
src/physics/: components.rs  debug.rs  mod.rs  shape_assets.rs  systems.rs
src/utils/: mod.rs  object_sync.rs
src/window/: input_reader.rs  mod.rs  system.rs  window.rs
src/xr/: camera_sync.rs  controller.rs  controllers.rs  events.rs  instance.rs  math.rs  mod.rs  origin.rs  renderer.rs  session.rs
